Thu Dec 21 06:58:21 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: The "Merry Christmas" update of the Swedish translation.

Wed Dec 20 12:50:55 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * main/processarc.c: revert change from Adam: reading the trailing
    zeroes is essential, not reading them can give us a SIGPIPE
    on extracting.

Wed Dec 20 02:41:39 CST 2000 Adam Heath <doogie@debian.org>

  * dpkg-deb/build.c, dpkg-deb/extract.c, dpkg-deb/info.c,
    include/dpkg-db.h, lib/myopt.c, lib/parse.c, lib/varbuf.c,
    lib/vercmp.c, main/archives.c, main/enquiry.c, main/filesdb.c,
    main/processarc.c, po/dpkg.pot: Fix -Wall messages.

Wed Dec 20 02:21:43 CST 2000 Adam Heath <doogie@debian.org>

  * include/dpkg.h.in: Make {stream,fd}_null_copy use [lf]seek, and fall
    back on the buffer code, if stream/fd refer to a pipe.

Wed Dec 20 02:17:56 CST 2000 Adam Heath <doogie@debian.org>

  * configure.in, Makefile.conf.in: Move -D_GNU_SOURCE from configure.in
    to Makefile, and from CFLAGS to DEFS.  This macro was getting lost
    if someone was setting CFLAGS on the cmdline.  Perhaps this should
    be moved into config.h.in?

Wed Dec 20 01:39:30 CST 2000 Adam Heath <doogie@debian.org>

  * main/processarc.c: Don't copy trailing zeros from dpkg-deb
    pipe.
  * main/archives.c: Fix some i8ln.
  * dpkg-deb/extract.c: Remove skipmember(), and use the buffer
    copy code.

Wed Dec 20 01:31:28 CST 2000 Adam Heath <doogie@debian.org>

  * lib/nfmalloc.c, lib/parsehelp.c: Lesson the memory footprint.

Wed Dec 20 01:11:13 CST 2000 Adam Heath <doogie@debian.org>

  * dpkg-deb/build.c: Fix building of debs, when there is no given
    compression on the cmdline.

Wed Dec 20 01:55:59 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-architecture.pl: fix typo / syntax error

Mon Dec 18 07:37:10 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.
