@@ -1,3 +1,7 @@
+Thu Dec 21 01:22:22 CST 2000 Adam Heath <doogie@debian.org>
+
+  * lib/mlib.c: Handle EINTR on reading and writting in buffer_copy.
+
 Thu Dec 21 06:58:21 CET 2000 peter karlsson <peterk@debian.org>
 
   * po/sv.po: The "Merry Christmas" update of the Swedish translation.
